--- a/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
@@ -83,3 +83,6 @@ databaseChangeLog:
   - include:
       file: tables/ambulance.yaml
       relativeToChangelogFile: true
+  - include:
+      file: tables/contribution.yaml
+      relativeToChangelogFile: true
