--- a/src/main/resources/db/changelog/v-0.1.0/tables/profile.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/profile.yaml
@@ -76,6 +76,9 @@ databaseChangeLog:
                   name: domain_id
                   type: int4
               - column:
+                  name: contribution_points
+                  type: int4
+              - column:
                   constraints:
                     nullable: false
                   name: is_blood_donor
