--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ SERVER_PORT=6700
 DB_HOSTNAME=localhost
 DB_PORT=5432
 POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=12345678
+POSTGRES_PASSWORD=123
 
 # Keycloak Configuration
 KEYCLOAK_SERVER_URL=http://localhost:8080
@@ -37,7 +37,7 @@ MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET_NAME=opencare
 
 # MinIO Data Directory
-MINIO_DATA_DIR=/home/sadman/Documents/Personal/opencare-minio
+MINIO_DATA_DIR=/home/ismail/sadman_bhai/file
 
 # Github Configuration
 GITHUB_TOKEN=ghp_your_github_token_here
