--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,7 @@ LOGGING_LEVEL_SQL=debug
 LOGGING_LEVEL_WEB=debug
 
 # MinIO Configuration
-MINIO_ENDPOINT=localhost:9000
+MINIO_ENDPOINT=http://127.0.0.1:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET_NAME=opencare
