--- a/.env.qa
+++ b/.env.qa
@@ -8,7 +8,7 @@ POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=12345678
 
 # Keycloak Configuration
-KEYCLOAK_SERVER_URL=http://localhost:8080
+KEYCLOAK_SERVER_URL=http://127.0.0.1:8080
 KEYCLOAK_REALM=opencare
 KEYCLOAK_CLIENT_ID=open-care-backend
 KEYCLOAK_CLIENT_SECRET=u3L5IEUSLoBoPzFghcMUvdSJSUedr6Fm
