--- a/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
@@ -92,3 +92,6 @@ databaseChangeLog:
   - include:
       file: tables/amenity_property.yaml
       relativeToChangelogFile: true
+  - include:
+      file: tables/campaign.yaml
+      relativeToChangelogFile: true
