add multiple admin hospital,

--- a/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
@@ -95,3 +95,12 @@ databaseChangeLog:
   - include:
       file: tables/campaign.yaml
       relativeToChangelogFile: true
+  - include:
+      file: tables/hospital_profile.yaml
+      relativeToChangelogFile: true
+  - include:
+      file: tables/institution_profile.yaml
+      relativeToChangelogFile: true
+  - include:
+      file: tables/organization_profile.yaml
+      relativeToChangelogFile: true
