--- a/src/main/resources/db/changelog/v-0.1.0/tables/hospital_profile.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/hospital_profile.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: create-organization-event-table
+      id: create-hospital-profile-table
       author: sadman
       changes:
         - createTable:
@@ -9,36 +9,40 @@ databaseChangeLog:
                   constraints:
                     nullable: false
                     primaryKey: true
-                    primaryKeyName: organization_event_id_pk
+                    primaryKeyName: hospital_profile_id_pk
                   name: id
-                  type: serial
+                  type: bigserial
               - column:
                   constraints:
                     nullable: false
-                  name: organization_id
+                  name: profile_id
+                  type: int8
+              - column:
+                  constraints:
+                    nullable: false
+                  name: hospital_id
                   type: int4
               - column:
                   constraints:
                     nullable: false
-                  name: title
+                  name: position
                   type: varchar(300)
               - column:
                   constraints:
                     nullable: false
-                  name: description
-                  type: text
+                  name: start_date
+                  type: date
               - column:
                   constraints:
                     nullable: false
-                  name: event_type
-                  type: varchar(50)
-                  defaultValue: 'general'
+                  name: end_date
+                  type: date
               - column:
                   constraints:
                     nullable: false
-                  name: category
-                  type: varchar(50)
-                  defaultValue: 'general'
+                  name: is_active
+                  type: boolean
+                  defaultValueBoolean: true
               - column:
                   constraints:
                     nullable: false
@@ -63,4 +67,24 @@ databaseChangeLog:
                   name: updated_at
                   type: timestamp
                   defaultValueComputed: 'CURRENT_TIMESTAMP'
-            tableName: organization_event
+            tableName: hospital_profile
+        - addForeignKeyConstraint:
+            baseColumnNames: profile_id
+            baseTableName: hospital_profile
+            constraintName: hospital_profile_fk_profile
+            deferrable: false
+            initiallyDeferred: false
+            onUpdate: CASCADE
+            referencedColumnNames: id
+            referencedTableName: profile
+            validate: true
+        - addForeignKeyConstraint:
+            baseColumnNames: hospital_id
+            baseTableName: hospital_profile
+            constraintName: hospital_profile_fk_hospital
+            deferrable: false
+            initiallyDeferred: false
+            onUpdate: CASCADE
+            referencedColumnNames: id
+            referencedTableName: hospital
+            validate: true
