add new field in profile

--- a/src/main/resources/db/changelog/v-0.1.0/tables/profile.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/profile.yaml
@@ -79,8 +79,17 @@ databaseChangeLog:
                   type: boolean
                   defaultValueBoolean: false
               - column:
+                  name: blood_donation_count
+                  type: int4
+              - column:
                   name: last_blood_donation_date
                   type: timestamp
+              - column:
+                  constraints:
+                      nullable: false
+                  name: is_volunteer
+                  type: boolean
+                  defaultValueBoolean: false
               - column:
                   constraints:
                     nullable: false
